Add docker-compose configuration to build and run app